force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/LLC_BI__Automated_Booking_Status__c.object-meta.xml
<CustomObject>
    <description>This object stores Automated Booking statuses, which indicate how the institution&apos;s core system stored Salesforce records.</description>
    <label>Automated Booking Status</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Booking Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>