force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Action__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action__c</fullName>
    <description>Action</description>
    <label>Action</label>
    <length>25</length>
    <type>Text</type>
</CustomField>