force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Record_Id__c</fullName>
    <description>Id of the SObject that is having an Id reserved or being booked.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>