force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status_Summary__c</fullName>
    <description>--DEPRECATED-- Replaced by LLC_BI__Summary__c</description>
    <label>-D Status Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>