force-app/main/default/objects/LLC_BI__Automated_Booking_Status__c/fields/LLC_BI__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Transaction_Id__c</fullName>
    <description>Transaction log Id</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>